# Lima-camera-rayonixhs

./: .gitignore  CMakeLists.txt  README  README.md
cmake/: FindCraydl.cmake  FindCraydl_c.cmake
conda/camera/: meta.yaml
conda/tango/: meta.yaml
craydl_c/: CMakeLists.txt  craydl_c.cpp  craydl_c.h
doc/: index.rst
include/: FrameStatusCb.h  RayonixHsBinCtrlObj.h  RayonixHsBufferCtrlObj.h  RayonixHsCamera.h  RayonixHsDetInfoCtrlObj.h  RayonixHsInterface.h  RayonixHsShutterCtrlObj.h  RayonixHsSyncCtrlObj.h  craydl_c.h
python/: __init__.py
rundir/: RxDetector.conf  SISIM  SISIM-1  SISIM-2  SISIM-3  SISIM-4  SISIM-5  SISIM-6  libSiVCamDll.so.0  libSiVCamDll.so.0.0.0  libcraydl.so.0  libcraydl.so.0.1  libcraydl.so.0.1.13  libcraydl_gpu.so.0  libcraydl_gpu.so.0.1  libcraydl_gpu.so.0.1.13  libcraydl_gpu.so.0.1.14  libcraydl_gpustub.so.0  libcraydl_gpustub.so.0.1  libcraydl_gpustub.so.0.1.13
sdk/include/craydl/: CUDAInterface.h  Chameleon.h  ConfigFile.h  CrashReporter.h  LineStats.h  MarCCD.h  PixelTypes.h  RemoteModeEmulator.h  RxDetector.h  RxFrame.h  RxFrameCorrection.h  RxFrameCorrectionFilenameGenerator.h  RxFrameMath.h  RxFrameMathGPU.h  RxFrameMetaData.h  RxLog.h  RxTransformation.h  RxUtils.h  RxVDetector.h  SIVCamDLLInterface.h  craydl.h  geometry.h  scale_frame_for_screen.h  time_subs.h
sdk/include/marccd/: LiteClue.h  LiteClueP.h  angle_subs.h  application.h  ascdate.h  beam_alignment.h  beam_alignment_graph_w.h  beam_simulation.h  beamline_control.h  buddha_interface.h  buddha_stubs.h  build_menu.h  ccd_chips.h  clean_string.h  collect_frame.h  color.h  configuration.h  coord_mapping.h  coordinates.h  crystal_alignment.h  cursors.h  dataset.h  dataset_dialog.h  dataset_protocol.h  detcom.h  detector.h  detector_dialog.h  detector_marCCD.h  detector_marCCDP.h  detector_marMosaic.h  detector_marMosaicP.h  detector_mmx.h  detector_mmx1.h  detector_mmx1P.h  detector_mmxP.h  detector_none.h  detector_noneP.h  detector_nwu0.h  detector_nwu0P.h  detector_rayonix.h  (+117 more)
sdk/lib64/: libSiVCamDll.so.0  libSiVCamDll.so.0.0.0  libcraydl.so.0  libcraydl_gpu.so.0  libcraydl_gpu.so.0.1  libcraydl_gpu.so.0.1.13  libcraydl_gpu.so.0.1.14  libcraydl_gpustub.so.0  libcraydl_gpustub.so.0.1  libcraydl_gpustub.so.0.1.13
sdk/lib64/SISIM/: MISCELLANEOUS.XML  command.xml  control.xml  control_q.xml  factory.xml  files.xml  modes.xml  setup.xml  setup_q.xml  software_summary.xml  status.xml  status_q.xml
sdk/lib64/SISIM-3/: MISCELLANEOUS.XML  command.xml  control.xml  control_q.xml  factory.xml  files.xml  setup.xml  setup_q.xml  software_summary.xml  status.xml  status_q.xml
sdk/lib64/SISIM-4/: MISCELLANEOUS.XML  control.xml  control_q.xml  factory.xml  modes.xml  setup.xml  setup_q.xml  software_summary.xml  status.xml  status_q.xml
sdk/lib64/SISIM-5/: MISCELLANEOUS.XML  control.xml  control_q.xml  factory.xml  setup.xml  setup_q.xml  software_summary.xml  status.xml  status_q.xml
sdk/lib64/libcraydl_gpu/: libcraydl_gpu.so.0.1.13
sdk/lib64/libcraydl_nocuda/: libcraydl_gpu.so.0.1.14  libcraydl_gpustub.so.0.1
sip/: RayonixHsCamera.sip  RayonixHsInterface.sip
src/: CMakeLists.txt  FrameStatusCb.cpp  Makefile  RayonixHsBinCtrlObj.cpp  RayonixHsBufferCtrlObj.cpp  RayonixHsCamera.cpp  RayonixHsDetInfoCtrlObj.cpp  RayonixHsInterface.cpp  RayonixHsShutterCtrlObj.cpp  RayonixHsSyncCtrlObj.cpp  craydl_c.cpp
tango/: CMakeLists.txt  RayonixHs.py
test/: CMakeLists.txt  Makefile  rayonixhs_test_camera.cpp
